[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Enemies/MMDG-1.png (1).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/Enemy_3.gd" type="Script" id=2]
[ext_resource path="res://SFX/Sound effects Pack 2/Sound effects Pack 2/Coins/WAV/Coins 3 - Sound effects Pack 2.wav" type="AudioStream" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.4956, 15.3551 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.4426, 17.9059 )

[sub_resource type="Animation" id=3]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 8.07503 ), Vector2( 0, 0 ), Vector2( -0.475006, -6.17502 ), Vector2( 0, 0 ), Vector2( 4.27501, -0.475006 ), Vector2( 0.30399, 0.969005 ), Vector2( -6.3587, 0.453624 ), Vector2( 0.0927992, -0.0410977 ) ]
}

[node name="Enemy_3_Root" type="Node2D"]
scale = Vector2( 2, 2 )

[node name="Enemy_3_KinematicBody" type="KinematicBody2D" parent="."]
scale = Vector2( 0.7, 0.7 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="Enemy_3_Sprite" type="Sprite" parent="Enemy_3_KinematicBody"]
modulate = Color( 0.458824, 0.203922, 0, 1 )
texture = ExtResource( 1 )

[node name="Enemy_3_Col_Body" type="CollisionShape2D" parent="Enemy_3_KinematicBody"]
shape = SubResource( 1 )

[node name="Enemy_3_Hit" type="Area2D" parent="Enemy_3_KinematicBody"]
collision_layer = 2
collision_mask = 4

[node name="Enemy_3_Col_Hit" type="CollisionShape2D" parent="Enemy_3_KinematicBody/Enemy_3_Hit"]
shape = SubResource( 2 )

[node name="Enemy_Hit_SFX" type="AudioStreamPlayer" parent="Enemy_3_KinematicBody/Enemy_3_Hit"]
stream = ExtResource( 3 )

[node name="Enemy_3_Animation_Move" type="AnimationPlayer" parent="Enemy_3_KinematicBody"]
anims/move = SubResource( 3 )

[node name="Enemy_3_Visibility" type="VisibilityNotifier2D" parent="Enemy_3_KinematicBody"]
position = Vector2( -0.13257, 0.058711 )
scale = Vector2( 1.91428, 1.82857 )
[connection signal="area_entered" from="Enemy_3_KinematicBody/Enemy_3_Hit" to="Enemy_3_KinematicBody" method="_on_Enemy_3_Hit_area_entered"]
